recursion.hanoi.lessons.recursion.hanoi.SplitHanoi1.scala.error
SplitHanoi1:21: error: value ! is not a member of Int
  if(height !0){
            ^SplitHanoi1:22: error: not enough arguments for method hanoi: (height: Int, src: Int, other: Int, dst: Int)Unit.
Unspecified value parameter dst.
    hanoi(2 * height - 2, src, other)
         ^